hphp/hack/test/typecheck/like_types/dynamic_coercion/like_decl_types/toption.php.exp
File "toption.php", line 12, characters 24-35:
Invalid return type (Typing[4110])
File "toption.php", line 12, characters 43-52:
This is a tuple of size 2
File "toption.php", line 12, characters 24-35:
It is incompatible with a dynamic value
